--- a/src/view/greeting/create.html
+++ b/src/view/greeting/create.html
@@ -2,8 +2,15 @@
 {% block title %}A new greeting!{% endblock %}
 {% block body %}
   <form method="post">
+    {% if errors %}
+      <ul>
+        {% for error in errors %}
+          <li><font color=red>{{ error }}</font>
+        {% endfor %}
+      </ul>
+    {% endif %}
     Enter a new greeting:
-    <textarea name="greeting_text"></textarea>
+    <textarea name="greeting_text">{% if new_msg %}{{ new_msg.greeting_text }}{% endif %}</textarea>
     <input type="submit">
   </form>
 {% endblock %}
